Added item counters and re-factoring.

--- a/todo-example/dojo/TODO
+++ b/todo-example/dojo/TODO
@@ -1,4 +1,3 @@
+- Remove use of IDs
 - Support local storage using custom Dojo Store
-- Editing of existing todos
-- Allow checking of completed items
 - Use local Dojo JS version
